hphp/hack/test/typecheck/new_inference/builtin_enum.php.rust_elab.exp
File "builtin_enum.php", line 4, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
